added the link to the JSON in the ajax request
You weren't referencing the JSON file and that was why it didn't load. I have added it now so it should work. I didn't test this locally but that is the issue I observed.

--- a/leadershipboard.html
+++ b/leadershipboard.html
@@ -27,7 +27,7 @@
 
 <script >
 	$(document).ready(function(){
-		$.getJSON("", function(data){
+		$.getJSON("lead.json", function(data){
 			var lead_data = '';
 			$.each(data, function(key, value){
 				lead_data += '<tr>';
